First cut at BCHP deployment from bcgov GitHub. Partial move of extensions into BCHP package.

--- a/src/arches_bchp/arches_bchp/pkg/package_config.json
+++ b/src/arches_bchp/arches_bchp/pkg/package_config.json
@@ -1,1 +1,13 @@
-{"business_data_load_order": [], "permitted_resource_relationships": []}
+{
+  "business_data_load_order": [
+    "part1_site.csv",
+    "part2_name.csv",
+    "part3_location.csv",
+    "part4_address.csv",
+    "part5_heritage_class.csv",
+    "part6_authority.csv",
+    "part7_sos.csv",
+    "part8_functional_status.csv"
+  ],
+  "permitted_resource_relationships": []
+}
