Interim commit of Fossils model update

--- a/src/arches_fossils/.gitignore
+++ b/src/arches_fossils/.gitignore
@@ -1,6 +1,7 @@
 *.pyc
 *.log
 arches_fossils/logs
+arches_fossils/management/data/*
 arches_fossils/export_deliverables
 arches_fossils/cantaloupe/*
 arches_fossils/media/packages
