31 - Updates to import BC Fossil Interest Areas

--- a/src/arches_fossils/arches_fossils/pkg/package_config.json
+++ b/src/arches_fossils/arches_fossils/pkg/package_config.json
@@ -1,5 +1,6 @@
 {
   "business_data_load_order": [
+    "part0_fossil_interest_areas.zip",
     "part1_site.csv",
     "part2_collection_event.csv",
     "part3_collection_notes.csv",
