BCRHP - Added HIST_ENV spatial data to the package, updates for new custom descriptors function

--- a/src/arches_bchp/arches_bchp/pkg/package_config.json
+++ b/src/arches_bchp/arches_bchp/pkg/package_config.json
@@ -7,7 +7,8 @@
     "part5_heritage_class.csv",
     "part6_authority.csv",
     "part7_sos.csv",
-    "part8_functional_status.csv"
+    "part8_functional_status.csv",
+    "part9_spatial_site_data.zip"
   ],
   "permitted_resource_relationships": []
 }
