dev - Fossils - Show overlay labels for water and parks overlays dev - BCRHP - Borden grid label colour

--- a/src/arches_fossils/.gitignore
+++ b/src/arches_fossils/.gitignore
@@ -7,5 +7,9 @@ arches_fossils/cantaloupe/*
 arches_fossils/media/packages
 arches_fossils/uploadedfiles/*
 arches_fossils/settings_local.py
+
+arches_fossils/business_data/*.csv
+arches_fossils/mangement/data/*.py
+
 .vscode/
 CACHE
