--- a/src/arches_fossils/arches_fossils/package.json
+++ b/src/arches_fossils/arches_fossils/package.json
@@ -1,6 +1,6 @@
 {
     "name": "arches_fossils",
     "dependencies": {
-        "arches": "archesproject/arches#stable/6.0.x"
+        "arches": "archesproject/arches#dev/6.2.x"
     }
 }
