dev - Add gitignore rule for test user data 137 - Add remaining layers to map filter configuration

--- a/src/arches_bchp/.gitignore
+++ b/src/arches_bchp/.gitignore
@@ -1,6 +1,7 @@
 *.pyc
 *.log
 arches_bchp/logs
+arches_bchp/management/data/*
 arches_bchp/export_deliverables
 arches_bchp/cantaloupe/*
 arches_bchp/media/packages
