dev - Updated BCRHP title

--- a/src/arches_bchp/arches_bchp/pkg/system_settings/System_Settings.json
+++ b/src/arches_bchp/arches_bchp/pkg/system_settings/System_Settings.json
@@ -187,7 +187,7 @@
           {
             "data": {
               "c5a2b1dc-fadd-11e6-a726-6c4008b05c4c": null,
-              "c5a2b94a-fadd-11e6-a029-6c4008b05c4c": "Historic Sites POC",
+              "c5a2b94a-fadd-11e6-a029-6c4008b05c4c": "BC Registry of Historic Places",
               "c5a2bdb3-fadd-11e6-8c96-6c4008b05c4c": "ETL"
             },
             "nodegroup_id": "c5a2b1dc-fadd-11e6-a726-6c4008b05c4c",
