210 - Initial Arches7 updates

--- a/src/arches_bchp/.gitignore
+++ b/src/arches_bchp/.gitignore
@@ -7,5 +7,9 @@ arches_bchp/cantaloupe/*
 arches_bchp/media/packages
 arches_bchp/uploadedfiles/*
 arches_bchp/settings_local.py
+arches_bchp/staticfiles
+arches_bchp/webpack/webpack-stats.json
+arches_bchp/webpack/webpack-user-config.js
+node_modules
 .vscode/
 CACHE
