--- a/src/arches_fossils/.gitignore
+++ b/src/arches_fossils/.gitignore
@@ -11,5 +11,10 @@ arches_fossils/settings_local.py
 arches_fossils/business_data/*.csv
 arches_fossils/mangement/data/*.py
 
+arches_bchp/staticfiles
+arches_bchp/webpack/webpack-stats.json
+arches_bchp/webpack/webpack-user-config.js
+node_modules
+
 .vscode/
 CACHE
