--- a/src/arches_bchp/.gitignore
+++ b/src/arches_bchp/.gitignore
@@ -10,6 +10,9 @@ arches_bchp/settings_local.py
 arches_bchp/staticfiles
 arches_bchp/webpack/webpack-stats.json
 arches_bchp/webpack/webpack-user-config.js
+
+# Common resources that are copied from arches_common
+arches_bchp/media/css/project.css
 node_modules
 .vscode/
 CACHE
