--- a/src/arches_fossils/arches_fossils/pkg/graphs/resource_models/Industry Project Assessment.json
+++ b/src/arches_fossils/arches_fossils/pkg/graphs/resource_models/Industry Project Assessment.json
@@ -4835,11 +4835,10 @@
                         "graphs": [
                             {
                                 "graphid": "605b0bbc-8661-4cf2-b340-df743a8c5f89",
-                                "name": "Paleontology Consultant"
-                            },
-                            {
-                                "graphid": "3cf1f266-e390-4aac-8626-986f000c5b41",
-                                "name": "Industry Project Initiator"
+                                "inverseRelationshipConcept": "ac41d9be-79db-4256-b368-2f4559cfbe55",
+                                "name": "BC Fossils Contributor",
+                                "relationshipConcept": "ac41d9be-79db-4256-b368-2f4559cfbe55",
+                                "useOntologyRelationship": false
                             }
                         ],
                         "searchDsl": "",
@@ -5065,12 +5064,100 @@
                     "config": {
                         "graphs": [
                             {
-                                "graphid": "3cf1f266-e390-4aac-8626-986f000c5b41",
-                                "name": "Industry Project Initiator"
+                                "graphid": "605b0bbc-8661-4cf2-b340-df743a8c5f89",
+                                "inverseRelationshipConcept": "ac41d9be-79db-4256-b368-2f4559cfbe55",
+                                "name": "BC Fossils Contributor",
+                                "relationshipConcept": "ac41d9be-79db-4256-b368-2f4559cfbe55",
+                                "useOntologyRelationship": false
                             }
                         ],
-                        "searchDsl": "",
-                        "searchString": ""
+                        "searchDsl": {
+                            "bool": {
+                                "filter": [
+                                    {
+                                        "terms": {
+                                            "graph_id": [
+                                                "86700278-117b-11ec-90d4-5254008afee6",
+                                                "d735935c-3ddb-11ed-814d-5254008afee6",
+                                                "fac1b1b4-1034-11ec-8a7a-5254008afee6",
+                                                "605b0bbc-8661-4cf2-b340-df743a8c5f89",
+                                                "3746ffc8-a878-11ec-ab9a-5254008afee6",
+                                                "3bad9ec8-a35e-11ed-884a-5254004d77d3",
+                                                "dd19a93a-0202-11ed-a511-0050568377a0",
+                                                "7f2c2082-6c51-11ed-9b7d-5254004d77d3",
+                                                "df3ee1ae-9c1c-11ec-964d-5254008afee6",
+                                                "4d6c9226-10c6-11ec-9a94-5254008afee6",
+                                                "67574dc6-9c20-11ec-964d-5254008afee6",
+                                                "3e6a2880-14d4-11ec-9df0-5254008afee6",
+                                                "3cf1f266-e390-4aac-8626-986f000c5b41",
+                                                "3caf329f-b8f7-11e6-84a5-026d961c88e6",
+                                                "3eec83c6-9dd5-11ed-a81c-5254004d77d3",
+                                                "ff623370-fa12-11e6-b98b-6c4008b05c4c",
+                                                "897e8250-9c1d-11ec-a82a-5254008afee6",
+                                                "5b52dcac-9c1b-11ec-964d-5254008afee6",
+                                                "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
+                                                "82efcd14-82db-11ec-b8e6-5254008afee6",
+                                                "3ffba33a-9c20-11ec-92da-5254008afee6",
+                                                "8a209060-9c20-11ec-955e-5254008afee6"
+                                            ]
+                                        }
+                                    }
+                                ],
+                                "must": [
+                                    {
+                                        "bool": {
+                                            "filter": [],
+                                            "minimum_should_match": 1,
+                                            "must": [],
+                                            "must_not": [],
+                                            "should": [
+                                                {
+                                                    "bool": {
+                                                        "filter": [],
+                                                        "must": [
+                                                            {
+                                                                "nested": {
+                                                                    "path": "tiles",
+                                                                    "query": {
+                                                                        "bool": {
+                                                                            "filter": [],
+                                                                            "must": [
+                                                                                {
+                                                                                    "match_phrase": {
+                                                                                        "tiles.data.e2f1c29a-c500-11ed-9089-5254004d77d3": {
+                                                                                            "query": "846b43f9-b3b1-4c14-ae8f-c1e50bd5d6bd"
+                                                                                        }
+                                                                                    }
+                                                                                }
+                                                                            ],
+                                                                            "must_not": [],
+                                                                            "should": []
+                                                                        }
+                                                                    }
+                                                                }
+                                                            },
+                                                            {
+                                                                "bool": {
+                                                                    "filter": [],
+                                                                    "must": [],
+                                                                    "must_not": [],
+                                                                    "should": []
+                                                                }
+                                                            }
+                                                        ],
+                                                        "must_not": [],
+                                                        "should": []
+                                                    }
+                                                }
+                                            ]
+                                        }
+                                    }
+                                ],
+                                "must_not": [],
+                                "should": []
+                            }
+                        },
+                        "searchString": "http://arches7.local/int/arches-fossils/search?paging-filter=1&tiles=true&format=tilecsv&reportlink=false&precision=6&total=0&advanced-search=%5B%7B%22op%22%3A%22and%22%2C%22c4eca2de-9dea-11ed-9a7b-5254004d77d3%22%3A%7B%22op%22%3A%22%22%2C%22val%22%3A%22%22%7D%2C%22e2f1c29a-c500-11ed-9089-5254004d77d3%22%3A%7B%22op%22%3A%22%22%2C%22val%22%3A%22846b43f9-b3b1-4c14-ae8f-c1e50bd5d6bd%22%7D%2C%22a5b2cd72-c4f4-11ed-a06d-5254004d77d3%22%3A%7B%22op%22%3A%22~%22%2C%22lang%22%3A%22en%22%2C%22val%22%3A%22%22%7D%2C%22b5ed0072-c4f4-11ed-94de-5254004d77d3%22%3A%7B%22op%22%3A%22~%22%2C%22lang%22%3A%22en%22%2C%22val%22%3A%22%22%7D%2C%2299643f1e-9e4e-11ed-b6d5-5254004d77d3%22%3A%7B%22val%22%3A%22%22%7D%7D%5D"
                     },
                     "datatype": "resource-instance",
                     "description": null,
@@ -5918,9 +6005,19 @@
                 {
                     "alias": "fmo_actor",
                     "config": {
-                        "en": ""
+                        "graphs": [
+                            {
+                                "graphid": "605b0bbc-8661-4cf2-b340-df743a8c5f89",
+                                "inverseRelationshipConcept": "ac41d9be-79db-4256-b368-2f4559cfbe55",
+                                "name": "BC Fossils Contributor",
+                                "relationshipConcept": "ac41d9be-79db-4256-b368-2f4559cfbe55",
+                                "useOntologyRelationship": false
+                            }
+                        ],
+                        "searchDsl": "",
+                        "searchString": ""
                     },
-                    "datatype": "string",
+                    "datatype": "resource-instance",
                     "description": null,
                     "exportable": false,
                     "fieldname": null,
@@ -7205,8 +7302,8 @@
             "publication": {
                 "graph_id": "2aa724d1-ffd3-4823-8ff1-15a385b9a407",
                 "notes": null,
-                "publicationid": "3b3afea6-c373-11ed-a71d-5254004d77d3",
-                "published_time": "2023-03-15T15:52:00.073",
+                "publicationid": "8bf4a228-c51e-11ed-ac0e-5254004d77d3",
+                "published_time": "2023-03-17T18:50:50.611",
                 "user_id": 1
             },
             "relatable_resource_model_ids": [],
