--- a/src/arches_bchp/arches_bchp/pkg/system_settings/System_Settings.json
+++ b/src/arches_bchp/arches_bchp/pkg/system_settings/System_Settings.json
@@ -181,7 +181,7 @@
               "c5a2b94a-fadd-11e6-a029-6c4008b05c4c": {
                 "en": {
                   "direction": "ltr",
-                  "value": "BC Registry of Historic Places"
+                  "value": "BC Register of Historic Places"
                 }
               },
               "c5a2bdb3-fadd-11e6-8c96-6c4008b05c4c": {
